--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,11 @@
     <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
 
     <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
-
+<script type="text/javascript">
+if (window.location = "dubaitime.github.io") {
+   window.location.href = 'https://www.kobi-id.org/'; 
+}
+</script>
     <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9974005922060163" crossorigin="anonymous"></script>
 </head>
